# django-data-seed

./: .gitignore  DockerFile  LICENSE  README.md  docker-compose.yaml  req.txt  requirements.txt
core/: docker-compose.yaml  settings.py
django_data_seed/: LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
django_data_seed/app/management/commands/: fake_filler.py  fields.py  loaddata.py  play.py  utils.py
django_data_seed/django_data_seed/: admin.py  middleware.py  tests.py
django_data_seed/django_data_seed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_data_seed/django_data_seed/management/commands/: colorama_theme.py  loaddata.py  seeddata.py  utils.py
django_data_seed/django_data_seed/sub_app_1/: apps.py
django_data_seed/django_data_seed/utils/: admin_utils.py  colorama_theme.py  constants.py  excluded_models.py  get_user.py  json_compare.py  thread_locals.py  utils.py
