[metadata]
name = django-data-seed
version= 1.0
author =  rohithbaggam
author_email = baggamrohithraj@gmail.com
description = Django data seed package
long_description = file:README.rst
license = MIT
keywords = django data seed
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
package = find: